# riftteam

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 1a1267c7cf3d_add_snapshots_and_peak_rank.py  793f6b7d4330_initial_tables.py  a3f2e8b1c4d5_replace_looking_for_with_activities.py  b4c3d9e2f5a6_add_discord_user_id.py  c5d4e0f3a7b8_add_flex_lp_wins_losses.py  d6e5f1a2b3c4_add_teams.py  e7f6a3b4c5d8_add_scrims.py  f8a9b0c1d2e3_add_tokens_and_guild_settings.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  action_token.py  champion.py  guild_settings.py  player.py  scrim.py  snapshot.py  team.py
backend/app/routers/: guild_settings.py  og.py  players.py  riot.py  scrims.py  teams.py  tokens.py
backend/app/schemas/: player.py  scrim.py  team.py
backend/app/services/: og_generator.py  player_helpers.py  query_helpers.py  rank_utils.py  riot_api.py  role_detector.py  snapshots.py  sync.py  token_store.py
backend/tests/: conftest.py  test_format.py  test_og_helpers.py  test_player_helpers.py  test_players_router.py  test_query_helpers.py  test_rank_utils.py  test_rate_limit.py  test_role_detector.py  test_scrims_router.py  test_snapshots.py  test_teams_router.py  test_token_store.py
bot/: Dockerfile  bot.py  config.py  constants.py  pyproject.toml  utils.py
docs/: architecture.md
frontend/: index.html  (+4 more)
(+47 files in other folders)
