[project]
name = "riftteam-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "aiohttp>=3.11",
    "pydantic-settings>=2.7",
    "pillow>=11.1",
    "python-dotenv>=1.0",
    "riftteam-shared",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx", "aiosqlite"]

[tool.uv.sources]
riftteam-shared = { path = "../shared", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shared"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
